tests/paczka1/fuzzy1/68243607.err
Error in line 7: oxoI S23 17,9
Error in line 2: 3ojGSYZgKE S23 73,3
Error in line 6: r3pX A352 51,2
Error in line 21: S91 A352 84,8
Error in line 29: r3pX S110 93,72
Error in line 25: r3pX S23 97,3
Error in line 35: r3pX S110 149,1
